--- a/napo-go-firestore/config/config.json
+++ b/napo-go-firestore/config/config.json
@@ -9,8 +9,8 @@
   "database": {
     "host": "localhost",
     "port": "3306",
-    "user": "user??",
-    "pass": "pass??",
+    "user": "napouser",
+    "pass": "napouser",
     "name": "napo-firestore"
   },
   "reqToken": "ABC"
