Redis config with viper. DbTransactionType as parameter on repository level

--- a/napo-go-firestore/config/config.json
+++ b/napo-go-firestore/config/config.json
@@ -13,6 +13,11 @@
     "pass": "napouser",
     "name": "napo-firestore"
   },
+  "cache_redis": {
+    "addr": "localhost:6379",
+    "password": "",
+    "db": 0
+  },
   "reqToken": "ABC",
   "jwtKey": "12345678"
 }
